--- a/package.json
+++ b/package.json
@@ -14,10 +14,29 @@
     "yarn": "please-use-pnpm"
   },
   "scripts": {
-    "preinstall": "npx only-allow pnpm"
+    "// ━━━━━━━━━━━━━━━━━ LIFECYCLE ━━━━━━━━━━━━━━━━━": "",
+    "preinstall": "npx only-allow pnpm",
+    "prebuild": "pnpm clean",
+    "// ━━━━━━━━━━━━━━━ DEVELOPMENT ━━━━━━━━━━━━━━━━━": "",
+    "dev": "nodemon --watch src --ext ts --exec tsx src/index.ts",
+    "// ━━━━━━━━━━━━━━━━━━ BUILD ━━━━━━━━━━━━━━━━━━━━": "",
+    "build": "tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json",
+    "build:watch": "tsc -p tsconfig.build.json --watch & tsc-alias -p tsconfig.build.json --watch",
+    "// ━━━━━━━━━━━━━━━━ PRODUCTION ━━━━━━━━━━━━━━━━━": "",
+    "start": "node dist/index.js",
+    "// ━━━━━━━━━━━━━━━━━━ CLEANUP ━━━━━━━━━━━━━━━━━━": "",
+    "clean": "rimraf dist build .next out coverage .turbo .eslintcache node_modules/.cache .vitest .tsbuildinfo tsconfig.tsbuildinfo"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@10.25.0"
+  "packageManager": "pnpm@10.25.0",
+  "devDependencies": {
+    "@types/node": "25.0.1",
+    "nodemon": "3.1.11",
+    "rimraf": "6.1.2",
+    "tsc-alias": "1.8.16",
+    "tsx": "4.20.6",
+    "typescript": "5.9.3"
+  }
 }
