--- a/package.json
+++ b/package.json
@@ -24,6 +24,17 @@
     "build:watch": "tsc -p tsconfig.build.json --watch & tsc-alias -p tsconfig.build.json --watch",
     "// ━━━━━━━━━━━━━━━━ PRODUCTION ━━━━━━━━━━━━━━━━━": "",
     "start": "node dist/index.js",
+    "// ━━━━━━━━━━━━━━━━ LINTING ━━━━━━━━━━━━━━━━━━━": "",
+    "lint": "eslint . --cache --cache-location .eslintcache",
+    "lint:fix": "eslint . --cache --cache-location .eslintcache --fix",
+    "// ━━━━━━━━━━━━━━━ FORMATTING ━━━━━━━━━━━━━━━━━": "",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md,yml,yaml}\"",
+    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md,yml,yaml}\"",
+    "// ━━━━━━━━━━━━━━ TYPE CHECKING ━━━━━━━━━━━━━━━": "",
+    "type-check": "tsc --noEmit",
+    "// ━━━━━━━━━━━━━━━ VALIDATION ━━━━━━━━━━━━━━━━━": "",
+    "check": "pnpm run format:check && pnpm run lint && pnpm run type-check",
+    "check:fix": "pnpm run format && pnpm run lint:fix && pnpm run type-check",
     "// ━━━━━━━━━━━━━━━━━━ CLEANUP ━━━━━━━━━━━━━━━━━━": "",
     "clean": "rimraf dist build .next out coverage .turbo .eslintcache node_modules/.cache .vitest .tsbuildinfo tsconfig.tsbuildinfo"
   },
@@ -32,11 +43,24 @@
   "license": "ISC",
   "packageManager": "pnpm@10.25.0",
   "devDependencies": {
+    "@eslint/js": "9.39.1",
     "@types/node": "25.0.1",
+    "@typescript-eslint/eslint-plugin": "8.47.0",
+    "@typescript-eslint/parser": "8.47.0",
+    "eslint": "9.39.1",
+    "eslint-config-prettier": "10.1.8",
+    "eslint-import-resolver-typescript": "4.4.4",
+    "eslint-plugin-import": "2.32.0",
+    "eslint-plugin-n": "17.23.1",
+    "eslint-plugin-prettier": "5.5.4",
+    "eslint-plugin-unused-imports": "4.3.0",
+    "globals": "16.5.0",
     "nodemon": "3.1.11",
+    "prettier": "3.7.4",
     "rimraf": "6.1.2",
     "tsc-alias": "1.8.16",
     "tsx": "4.20.6",
-    "typescript": "5.9.3"
+    "typescript": "5.9.3",
+    "typescript-eslint": "8.47.0"
   }
 }
