Testing Setup (Vitest)

--- a/package.json
+++ b/package.json
@@ -19,14 +19,24 @@
     "prebuild": "pnpm clean",
     "// ━━━━━━━━━━━━━━━ DEVELOPMENT ━━━━━━━━━━━━━━━━━": "",
     "dev": "nodemon --watch src --ext ts --exec tsx src/index.ts",
+    "dev:debug": "tsx watch --inspect --clear-screen=false src/index.ts",
+    "dev:watch": "concurrently --kill-others -n SERVER,TYPES,LINT,TEST -c blue,magenta,yellow,green \"pnpm:dev\" \"pnpm:type-check --watch\" \"pnpm:lint:watch\" \"pnpm:test\"",
     "// ━━━━━━━━━━━━━━━━━━ BUILD ━━━━━━━━━━━━━━━━━━━━": "",
     "build": "tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json",
     "build:watch": "tsc -p tsconfig.build.json --watch & tsc-alias -p tsconfig.build.json --watch",
     "// ━━━━━━━━━━━━━━━━ PRODUCTION ━━━━━━━━━━━━━━━━━": "",
     "start": "node dist/index.js",
+    "// ━━━━━━━━━━━━━━━━━━ TESTING ━━━━━━━━━━━━━━━━━━━": "",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:changed": "vitest run --changed",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui",
+    "test:ci": "vitest run --coverage --reporter=verbose",
     "// ━━━━━━━━━━━━━━━━ LINTING ━━━━━━━━━━━━━━━━━━━": "",
     "lint": "eslint . --cache --cache-location .eslintcache",
     "lint:fix": "eslint . --cache --cache-location .eslintcache --fix",
+    "lint:watch": "nodemon --watch src --ext ts,tsx,js,jsx --exec \"pnpm lint\"",
     "// ━━━━━━━━━━━━━━━ FORMATTING ━━━━━━━━━━━━━━━━━": "",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md,yml,yaml}\"",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md,yml,yaml}\"",
@@ -35,6 +45,8 @@
     "// ━━━━━━━━━━━━━━━ VALIDATION ━━━━━━━━━━━━━━━━━": "",
     "check": "pnpm run format:check && pnpm run lint && pnpm run type-check",
     "check:fix": "pnpm run format && pnpm run lint:fix && pnpm run type-check",
+    "// ━━━━━━━━━━━━━━━━━━ CI/CD ━━━━━━━━━━━━━━━━━━━━━": "",
+    "ci": "pnpm lint && pnpm type-check && pnpm test:ci && pnpm build",
     "// ━━━━━━━━━━━━━━━━━━ CLEANUP ━━━━━━━━━━━━━━━━━━": "",
     "clean": "rimraf dist build .next out coverage .turbo .eslintcache node_modules/.cache .vitest .tsbuildinfo tsconfig.tsbuildinfo"
   },
@@ -47,6 +59,9 @@
     "@types/node": "25.0.1",
     "@typescript-eslint/eslint-plugin": "8.47.0",
     "@typescript-eslint/parser": "8.47.0",
+    "@vitest/coverage-v8": "4.0.15",
+    "@vitest/ui": "4.0.15",
+    "concurrently": "9.2.1",
     "eslint": "9.39.1",
     "eslint-config-prettier": "10.1.8",
     "eslint-import-resolver-typescript": "4.4.4",
@@ -61,6 +76,7 @@
     "tsc-alias": "1.8.16",
     "tsx": "4.20.6",
     "typescript": "5.9.3",
-    "typescript-eslint": "8.47.0"
+    "typescript-eslint": "8.47.0",
+    "vitest": "4.0.15"
   }
 }
