--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "// ━━━━━━━━━━━━━━━━━ LIFECYCLE ━━━━━━━━━━━━━━━━━": "",
     "preinstall": "npx only-allow pnpm",
+    "prepare": "husky",
     "prebuild": "pnpm clean",
     "// ━━━━━━━━━━━━━━━ DEVELOPMENT ━━━━━━━━━━━━━━━━━": "",
     "dev": "nodemon --watch src --ext ts --exec tsx src/index.ts",
@@ -48,20 +49,26 @@
     "// ━━━━━━━━━━━━━━━━━━ CI/CD ━━━━━━━━━━━━━━━━━━━━━": "",
     "ci": "pnpm lint && pnpm type-check && pnpm test:ci && pnpm build",
     "// ━━━━━━━━━━━━━━━━━━ CLEANUP ━━━━━━━━━━━━━━━━━━": "",
-    "clean": "rimraf dist build .next out coverage .turbo .eslintcache node_modules/.cache .vitest .tsbuildinfo tsconfig.tsbuildinfo"
+    "clean": "rimraf dist build .next out coverage .turbo .eslintcache node_modules/.cache .vitest .tsbuildinfo tsconfig.tsbuildinfo",
+    "// ━━━━━━━━━━━━━━━━━━ UTILITIES ━━━━━━━━━━━━━━━━": "",
+    "commit": "cz"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.25.0",
   "devDependencies": {
+    "@commitlint/cli": "20.2.0",
+    "@commitlint/config-conventional": "20.2.0",
     "@eslint/js": "9.39.1",
     "@types/node": "25.0.1",
     "@typescript-eslint/eslint-plugin": "8.47.0",
     "@typescript-eslint/parser": "8.47.0",
     "@vitest/coverage-v8": "4.0.15",
     "@vitest/ui": "4.0.15",
+    "commitizen": "4.3.1",
     "concurrently": "9.2.1",
+    "cz-conventional-changelog": "3.3.0",
     "eslint": "9.39.1",
     "eslint-config-prettier": "10.1.8",
     "eslint-import-resolver-typescript": "4.4.4",
@@ -70,6 +77,8 @@
     "eslint-plugin-prettier": "5.5.4",
     "eslint-plugin-unused-imports": "4.3.0",
     "globals": "16.5.0",
+    "husky": "9.1.7",
+    "lint-staged": "16.2.7",
     "nodemon": "3.1.11",
     "prettier": "3.7.4",
     "rimraf": "6.1.2",
@@ -78,5 +87,20 @@
     "typescript": "5.9.3",
     "typescript-eslint": "8.47.0",
     "vitest": "4.0.15"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --fix",
+      "prettier --write",
+      "vitest related --run --passWithNoTests"
+    ],
+    "*.{json,md,yml,yaml}": [
+      "prettier --write"
+    ]
   }
 }
